# Eisenjoch

./: .gitignore  Cargo.toml  LICENSE  pyproject.toml
benchmark/: bench_place_route.py  compare_congestion.py  compare_placers.py  gen_chipdb.py  gen_xc7_hybrid.py  gen_xc7_routing.py  run_benchmarks.py  sweep_hydraulic.py
benchmark/verilog/: ram_primitives.v
chip_database/: .gitignore
crates/nextpnr/: Cargo.toml
crates/nextpnr/src/: lib.rs
crates/nextpnr/src/checkpoint/: mod.rs  restore.rs
crates/nextpnr/src/chipdb/: access.rs  grid.rs  ids.rs  load.rs  mod.rs  pod.rs  relptr.rs  testutil.rs
crates/nextpnr/src/common/: binding.rs  id_string.rs  mod.rs
crates/nextpnr/src/context/: buckets.rs  core.rs  mod.rs  occupancy.rs  rng.rs  storage.rs  timing.rs  utils.rs  views.rs
crates/nextpnr/src/context/views/: common.rs  design.rs  hardware.rs  mod.rs  pins.rs
crates/nextpnr/src/frontend/: mod.rs
crates/nextpnr/src/metrics/: bbox.rs  congestion.rs  density.rs  mod.rs  utilization.rs  wirelength.rs
crates/nextpnr/src/netlist/: cell.rs  cluster.rs  design.rs  editors.rs  hierarchy.rs  indices.rs  mod.rs  net.rs  port_kind.rs  ports.rs  property.rs  region.rs
crates/nextpnr/src/packer/: extractor.rs  helpers.rs  mod.rs  passes.rs  rules.rs  tagger.rs  validator.rs
crates/nextpnr/src/placer/: common.rs  heap.rs  legalize.rs  mod.rs  sa.rs
crates/nextpnr/src/placer/electro_place/: config.rs  density.rs  mod.rs
crates/nextpnr/src/placer/hydraulic_place/: config.rs  kirchhoff.rs  legalize.rs  mod.rs  network.rs  state.rs  timing.rs
crates/nextpnr/src/placer/opt_trans_place/: config.rs  kirchhoff.rs  legalize.rs  mod.rs  network.rs  state.rs  timing.rs
crates/nextpnr/src/placer/solver/: adam.rs  cg.rs  lse.rs  mod.rs  multigrid.rs  nesterov.rs  velocity.rs  wa.rs
crates/nextpnr/src/plugin/: mod.rs
crates/nextpnr/src/router/: common.rs  mod.rs  router1.rs  router2.rs
crates/nextpnr/src/timing/: constraints.rs  delay.rs  domain.rs  kinds.rs  mod.rs  path.rs  report.rs  sort.rs
crates/nextpnr/src/types/: delay.rs  enums.rs  id_string.rs  ids.rs  mod.rs  property.rs
crates/nextpnr/tests/: checkpoint_tests.rs  chipdb.rs  context.rs  electro_place_tests.rs  example_arch_tests.rs  frontend_tests.rs  heap_internal_tests.rs  heap_tests.rs  hydraulic_internal_tests.rs  hydraulic_tests.rs  incremental_tests.rs  metrics_tests.rs  module_reorg_tests.rs  netlist_tests.rs  opt_trans_tests.rs  packer_internal_tests.rs  packer_tests.rs  plugin_tests.rs  region_tests.rs  router1_internal_tests.rs  router1_tests.rs  router2_internal_tests.rs  router2_tests.rs  sa_internal_tests.rs  sa_tests.rs  timing_tests.rs  types_tests.rs
crates/nextpnr/tests/common/: mod.rs
crates/nextpnr/tests/fixtures/: build_chipdb.sh  gen_example_chipdb.py
crates/npnr-chipdb/: Cargo.toml
crates/npnr-chipdb/src/: lib.rs  pod.rs  relptr.rs  tests.rs  testutil.rs
crates/npnr-context/: Cargo.toml
crates/npnr-context/src/: lib.rs  rng.rs  tests.rs
crates/npnr-frontend/: Cargo.toml
crates/npnr-frontend/src/: lib.rs
crates/npnr-netlist/: Cargo.toml
crates/npnr-netlist/src/: lib.rs
crates/npnr-packer/: Cargo.toml
crates/npnr-packer/src/: helpers.rs  lib.rs  passes.rs
crates/npnr-placer/: Cargo.toml
crates/npnr-placer/src/: heap.rs  lib.rs  sa.rs
crates/npnr-plugin/: Cargo.toml
crates/npnr-plugin/src/: lib.rs
crates/npnr-python/: Cargo.toml
crates/npnr-python/src/: lib.rs
crates/npnr-router/: Cargo.toml
crates/npnr-router/src/: lib.rs  router1.rs  router2.rs
crates/npnr-timing/: Cargo.toml
crates/npnr-timing/src/: domain.rs  lib.rs  path.rs  sort.rs
crates/npnr-types/: Cargo.toml
crates/npnr-types/src/: delay.rs  enums.rs  id_string.rs  ids.rs  lib.rs  loc.rs  property.rs
demo/: blinky.v  cells.lib  cells_map.v  cells_sim.v  run.py  synth.ys
docs/: hydraulic_place_update.md
docs/plans/: 2026-03-06-design-edit-api-design.md
docs/superpowers/plans/: 2026-03-10-parallel-placer.md  2026-03-13-placer-optimization.md
docs/superpowers/specs/: 2026-03-13-placer-optimization-design.md
python/: nextpnr_cli.py
python/nextpnr/: __init__.py  sdc.py
