[workspace]
resolver = "2"
members = ["crates/nextpnr", "crates/npnr-python"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memmap2 = "0.9"
pyo3 = { version = "0.23", features = ["extension-module"] }
log = "0.4"
rustc-hash = "2"
thiserror = "2"
anyhow = "1"
lasso = { version = "0.7", features = ["multi-threaded"] }
rayon = "1"
nextpnr = { path = "crates/nextpnr" }
