[package]
name = "npnr-frontend"
version = "0.1.0"
edition = "2021"
description = "Yosys JSON netlist parser"

[dependencies]
npnr-types = { workspace = true }
npnr-netlist = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
