[package]
name = "npnr-plugin"
version = "0.1.0"
edition = "2021"
description = "Plugin loading system for packer/placer/router"

[dependencies]
npnr-types = { workspace = true }
npnr-netlist = { workspace = true }
npnr-chipdb = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
npnr-chipdb = { workspace = true, features = ["test-utils"] }
