[package]
name = "npnr-router"
version = "0.1.0"
edition = "2021"
description = "Router1 and Router2 implementations"

[dependencies]
npnr-types = { workspace = true }
npnr-netlist = { workspace = true }
npnr-context = { workspace = true }
npnr-timing = { workspace = true }
rustc-hash = { workspace = true }
log = { workspace = true }
