[package]
name = "npnr-timing"
version = "0.1.0"
edition = "2021"
description = "Static timing analysis"

[dependencies]
npnr-types = { workspace = true }
npnr-netlist = { workspace = true }
rustc-hash = { workspace = true }
log = { workspace = true }

# Future: uncomment when integrating with chipdb timing data
# npnr-chipdb = { workspace = true }
# thiserror = { workspace = true }
